--- a/config/Localization/metratech.com/metratech.com_ARAdjustment_fr.xml
+++ b/config/Localization/metratech.com/metratech.com_ARAdjustment_fr.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <mt_config>
-    <language_code>fr</language_code>
+    <language_code>FR</language_code>
     <locale_space name="metratech.com/ARAdjustment">
         <locale_entry>
             <Name>metratech.com/ARAdjustment</Name>
