--- a/config/Localization/metratech.com/metratech.com_nonrecurringcharge_fr.xml
+++ b/config/Localization/metratech.com/metratech.com_nonrecurringcharge_fr.xml
@@ -8,7 +8,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/nonrecurringcharge/NRCEventType</Name>
-            <Value>Evénement</Value>
+            <Value>Événement</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/nonrecurringcharge/NRCIntervalEnd</Name>
