--- a/config/Localization/metratech.com/metratech.com_testservice_fr.xml
+++ b/config/Localization/metratech.com/metratech.com_testservice_fr.xml
@@ -24,7 +24,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/testservice/optionaltime</Name>
-            <Value>Heure facultative</Value>
+            <Value>Heure (facultatif)</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/testservice/Time</Name>
