--- a/config/Localization/LayoutText/LayoutText_fr.xml
+++ b/config/Localization/LayoutText/LayoutText_fr.xml
@@ -3,6 +3,10 @@
     <language_code>fr</language_code>
     <locale_space name="LayoutText">
         <locale_entry>
+            <Name>LayoutText/POListLayoutTemplate/</Name>
+            <Value/>
+        </locale_entry>
+        <locale_entry>
             <Name>LayoutText/AudioConfCall/Title</Name>
             <Value>Détails de la conférence</Value>
         </locale_entry>
