--- a/config/Localization/metratech.com/metratech.com_AddCharge_fr.xml
+++ b/config/Localization/metratech.com/metratech.com_AddCharge_fr.xml
@@ -40,7 +40,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AddCharge/NameSpace</Name>
-            <Value>Espace de nom</Value>
+            <Value>Espace de nommage</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AddCharge/otherchargetypecomment</Name>
@@ -56,7 +56,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AddCharge/ResolveWithAccountIDFlag</Name>
-            <Value>Résoudre avec indicateur de compte</Value>
+            <Value>Résoudre avec ID de compte</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/AddCharge/taxamount</Name>
