--- a/config/Localization/metratech.com/metratech.com_FileLandingService_fr.xml
+++ b/config/Localization/metratech.com/metratech.com_FileLandingService_fr.xml
@@ -8,15 +8,15 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eArgumentType/FILE</Name>
-            <Value>Fichier</Value>
+            <Value>FICHIER</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eArgumentType/FIXED</Name>
-            <Value>Fixe</Value>
+            <Value>FIXE</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eArgumentType/KVP</Name>
-            <Value>Paire de valeurs clés</Value>
+            <Value>PVC</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eArgumentType/SCRIPT</Name>
@@ -44,11 +44,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eDirectoryType/COMPLETED</Name>
-            <Value>Terminé</Value>
+            <Value>TERMINÉ</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eDirectoryType/FAILED</Name>
-            <Value>Rejeté</Value>
+            <Value>ÉCHEC</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eDirectoryType/METERED</Name>
@@ -76,7 +76,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eEventFilterType/DELETED</Name>
-            <Value>Supprimé</Value>
+            <Value>SUPPRIMÉ</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eEventFilterType/RENAMED</Name>
@@ -104,23 +104,23 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eFileState/PENDING</Name>
-            <Value>En attente</Value>
+            <Value>EN ATTENTE</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eFileState/REJECTED</Name>
-            <Value>Rejeté</Value>
+            <Value>REJETÉ</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EInvocationState/ACTIVE</Name>
-            <Value>Actif</Value>
+            <Value>ACTIF</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EInvocationState/COMPLETED</Name>
-            <Value>Terminé</Value>
+            <Value>TERMINÉ</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EInvocationState/FAILED</Name>
-            <Value>Rejeté</Value>
+            <Value>ÉCHEC</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EInvocationState/MATCHED</Name>
@@ -132,11 +132,11 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EInvocationState/PENDING</Name>
-            <Value>En attente</Value>
+            <Value>EN ATTENTE</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EInvocationState/QUEUED</Name>
-            <Value>PLACÉ EN FILE D’ATTENTE</Value>
+            <Value>PLACÉ EN FILE D'ATTENTE</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EInvocationState/UNKNOWN</Name>
@@ -176,7 +176,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eRejectionReason/INTERNAL_ERROR</Name>
-            <Value>Une erreur interne s’est produite.</Value>
+            <Value>Une erreur interne s'est produite.</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eRejectionReason/NO_ERROR</Name>
@@ -220,7 +220,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EServiceState/Active</Name>
-            <Value>Actif</Value>
+            <Value>ACTIF</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EServiceState/READY</Name>
@@ -228,7 +228,7 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EServiceState/RUNNING</Name>
-            <Value>Actif</Value>
+            <Value>ACTIF</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/EServiceState/STARTING</Name>
@@ -252,15 +252,15 @@
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eTargetType/EXECUTABLE</Name>
-            <Value>Exécutable</Value>
+            <Value>EXÉCUTABLE</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/eTargetType/GENERATED</Name>
-            <Value>ASSEMBLY</Value>
+            <Value>ENSEMBLE</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/ScriptArgumentType/FILE</Name>
-            <Value>Fichier</Value>
+            <Value>FICHIER</Value>
         </locale_entry>
         <locale_entry>
             <Name>metratech.com/FileLandingService/ScriptArgumentType/KVP</Name>
